MDEV-4254 Semisync plugins to link statically into MariaDB

fix semisync plugins and tests to work with both with static and dynamic linking